--- a/index.html
+++ b/index.html
@@ -260,6 +260,16 @@
             </div>
         </div>
         <!-- END THIRD PART -->
+
+
+        <!-- FOURTH PART -->
+        <div class="container-fourth-part">
+            <h1>Più di 500.000 team utilizzano Dropbox business</h1><br>
+            <a href="www.google.it">Scopri di più sui nostri clienti</a>
+        </div>
+        <!-- END FOURTH PART -->
+
+
     </div>
     <!-- END MAIN -->
 
